--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "administrator - ANDROID PROJECT"
+rootProject.name = "pratice android sgn"
 include ':app'
