--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.PraticeAndroidSgn"
         tools:targetApi="31">
         <activity
+            android:name=".administratorTask"
+            android:exported="false" />
+        <activity
+            android:name=".administratorLogin"
+            android:exported="false" />
+        <activity
             android:name=".loginActivity"
             android:exported="false" />
         <activity
